fixing paddind on mobile version at section skills

--- a/src/styles/Skills/skills.scss
+++ b/src/styles/Skills/skills.scss
@@ -23,7 +23,7 @@
         max-width: 1200px;
         width: auto;
         height: auto;
-        padding: 24px 0px ;
+        padding: 24px 24px ;
         display: flex;
         flex-wrap: wrap;
         overflow-x: auto;
